<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.estados.DietericiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginTop="@dimen/std_margin"
            android:text="@string/dieterici_str" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ec_dieterici" />

        <!-- Campo del volumen molar-->
        <LinearLayout style="@style/FieldStyle">

            <TextView
                style="@style/FieldTextStyle"
                android:text="@string/Vm_str" />

            <EditText
                android:id="@+id/volum_edit_text"
                style="@style/FieldEditTextStyle"
                android:ems="7" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/mol_volum_array" />

        </LinearLayout>

        <!-- Campo del parámetro a -->
        <LinearLayout style="@style/FieldStyle">

            <TextView
                style="@style/FieldTextStyle"
                android:text="@string/a_par_str" />

            <EditText
                android:id="@+id/par_a_edit_text"
                style="@style/FieldEditTextStyle" />

        </LinearLayout>

        <!-- Campo del parámetro b -->
        <LinearLayout style="@style/FieldStyle">

            <TextView
                style="@style/FieldTextStyle"
                android:text="@string/b_par_str" />

            <EditText
                android:id="@+id/par_b_edit_text"
                style="@style/FieldEditTextStyle" />

        </LinearLayout>

        <!-- Campo de la temperatura -->
        <LinearLayout style="@style/FieldStyle">

            <TextView
                style="@style/FieldTextStyle"
                android:text="@string/T_str" />

            <EditText
                android:id="@+id/temp_edit_text"
                style="@style/FieldEditTextStyle" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/temp_array" />

        </LinearLayout>

        <TextView
            style="@style/FieldTextStyle"
            android:text="@string/calc_str"
            android:layout_marginTop="@dimen/std_margin"
            android:layout_marginRight="@dimen/std_margin"
            android:layout_marginLeft="@dimen/std_margin"
            android:layout_marginBottom="@dimen/sec_margin"
            android:textSize="18sp"/>

        <!-- Botones de calcular -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calc_P_btn"
                style="@style/SmallButtonStyle"
                android:text="@string/P_str"
                android:background="@color/violet"
                android:layout_marginLeft="@dimen/std_margin"/>

            <TextView
                android:id="@+id/calc_V_btn"
                style="@style/SmallButtonStyle"
                android:text="@string/V_str"
                android:background="@color/violet"
                android:layout_marginLeft="@dimen/sec_margin"
                android:layout_marginRight="@dimen/sec_margin"/>

            <TextView
                android:id="@+id/calc_n_btn"
                style="@style/SmallButtonStyle"
                android:text="@string/T_str"
                android:background="@color/violet"
                android:layout_marginRight="@dimen/std_margin"/>

        </LinearLayout>

        <TextView
            android:id="@+id/resultado_text_view"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_margin"
            android:text="0"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/reset_btn"
            style="@style/ResetButtonStyle"
            android:background="@color/pink" />

    </LinearLayout>

</ScrollView>
